# Solstice

./: .gitignore  CMakeLists.txt  GenerateBuildInfo.cmake  README.md
.github/workflows/: cmake-single-platform.yml  cmake-single-platform2.yml
include/ImGui/: CMakeLists.txt  imconfig.h  imgui.h
include/Kiero/: CMakeLists.txt
include/entt/entity/: registry.hpp  sparse_set.hpp
include/libhat/: CMakeLists.txt
include/libhat/include/libhat/: Callable.hpp  Process.hpp
src/: Solstice.cpp  Solstice.hpp  dllmain.cpp  pch.hpp
src/Features/: FeatureManager.cpp  FeatureManager.hpp
src/Features/Auth/: Authorization.cpp  Authorization.hpp  CustomCryptor.hpp
src/Features/Command/: Command.cpp  Command.hpp  CommandManager.cpp  CommandManager.hpp
src/Features/Command/Commands/: BindCommand.cpp  BuildInfoCommand.cpp  BuildInfoCommand.hpp  ConfigCommand.cpp  FlingCommand.hpp  HelpCommand.cpp  HiveStatsCommand.cpp  SnipeCommand.cpp  TeleportCommand.cpp  TestCommand.cpp  TestCommand.hpp  ToggleCommand.cpp  UnbindCommand.cpp  VclipCommand.cpp
src/Features/Configs/: ConfigManager.cpp  ConfigManager.hpp  PreferenceManager.cpp  PreferenceManager.hpp
src/Features/Events/: ActorRenderEvent.cpp  ActorRenderEvent.hpp  BaseTickEvent.hpp  BobHurtEvent.hpp  BoneRenderEvent.hpp  CanShowNameTagEvent.hpp  ChatEvent.hpp  Event.cpp  Event.hpp  ItemSlowdownEvent.hpp  KeyEvent.hpp  LookInputEvent.hpp  ModuleStateChangeEvent.hpp  MouseEvent.hpp  PacketInEvent.hpp  PacketOutEvent.hpp  RunUpdateCycleEvent.hpp
src/Features/GUI/: ApolloDropdown.cpp  ApolloDropdown.hpp  Dropdown.cpp  Dropdown.hpp  FrostDropdown.cpp  FrostDropdown.hpp  ModernDropdowm.hpp  ModernDropdown.cpp  ModernDropdown.hpp
src/Features/IRC/: IrcClient.cpp  IrcClient.hpp  WorkingVM.hpp
src/Features/Modules/: Module.cpp  Module.hpp  ModuleCategory.hpp  ModuleManager.cpp  ModuleManager.hpp  Setting.cpp  Setting.hpp
src/Features/Modules/Combat/: Aura.cpp  Aura.hpp  AutoClicker.cpp  AutoClicker.hpp  Criticals.hpp  InfiniteAura.cpp  InfiniteAura.hpp  Reach.cpp  Reach.hpp  TriggerBot.cpp  TriggerBot.hpp
src/Features/Modules/Misc/: AntiBot.cpp  AntiBot.hpp  AntiCheatDetector.cpp  AntiCheatDetector.hpp  Anticheat.hpp  AutoCosmetic.cpp  AutoCosmetic.hpp  AutoDodge.cpp  AutoDodge.hpp  AutoHvH.cpp  AutoHvH.hpp  AutoLootbox.cpp  AutoLootbox.hpp  AutoMessage.cpp  AutoQueue.cpp  AutoQueue.hpp  AutoReport.cpp  AutoReport.hpp  AutoSnipe.cpp  CostumeSpammer.cpp  CostumeSpammer.hpp  Desync.cpp  DeviceSpoof.cpp  DeviceSpoof.hpp  Disabler.cpp  Disabler.hpp  EditionFaker.cpp  EditionFaker.hpp  Friends.cpp  IRC.cpp  IRC.hpp  KickSounds.cpp  KickSounds.hpp  Killsults.cpp  NetSkip.cpp  NetSkip.hpp  NoPacket.cpp  PacketLogger.cpp  PacketLogger.hpp  PartySpammer.cpp  (+14 more)
src/Features/Modules/Movement/: AirJump.hpp  AirSpeed.hpp  AntiImmobile.cpp  AntiImmobile.hpp  AutoPath.cpp  AutoPath.hpp  DamageBoost.cpp  DebugFly.cpp  DebugFly.hpp  Fly.cpp  Fly.hpp  HiveFly.cpp  HiveFly.hpp  InventoryMove.cpp  InventoryMove.hpp  Jesus.cpp  Jesus.hpp  LongJump.cpp  LongJump.hpp  NoSlowDown.cpp  NoSlowDown.hpp  Phase.cpp  Phase.hpp  ReverseStep.cpp  ReverseStep.hpp  SafeWalk.cpp  ServerSneak.cpp  ServerSneak.hpp  Speed.cpp  Speed.hpp  Spider.cpp  Spider.hpp  Step.cpp  Step.hpp  TargetStrafe.cpp  TargetStrafe.hpp  Velocity.cpp  Velocity.hpp
src/Features/Modules/Player/: AntiRegen.cpp  AntiRegen.hpp  AntiVoid.cpp  AntiVoid.hpp  AutoBoombox.cpp  AutoBoombox.hpp  AutoKick.cpp  AutoKick.hpp  AutoSpellBook.cpp  AutoSpellBook.hpp  AutoTool.cpp  AutoTool.hpp  ChestAura.cpp  ChestStealer.cpp  ChestStealer.hpp  ClickTp.cpp  ClickTp.hpp  Derp.cpp  Derp.hpp  Extinguisher.cpp  Extinguisher.hpp  Freecam.cpp  Freecam.hpp  InvManager.cpp  InvManager.hpp  MidclickAction.cpp  MidclickAction.hpp  NoFall.cpp  NoFall.hpp  Nuker.cpp  Nuker.hpp  OreMiner.cpp  OreMiner.hpp  Regen.cpp  Regen.hpp  RegenRecode.cpp  RegenRecode.hpp  Scaffold.cpp  Scaffold.hpp  Teams.cpp  (+2 more)
src/Features/Modules/Visual/: Animations.cpp  Animations.hpp  Arraylist.cpp  Arraylist.hpp  AutoScale.cpp  AutoScale.hpp  BlockESP.cpp  BlockESP.hpp  ChinaHat.cpp  ChinaHat.hpp  ClickGui.cpp  ClickGui.hpp  CustomChat.cpp  CustomChat.hpp  DestroyProgress.cpp  DestroyProgress.hpp  ESP.cpp  ESP.hpp  Freelook.cpp  Freelook.hpp  FullBright.hpp  Glint.cpp  HudEditor.cpp  HudEditor.hpp  Interface.cpp  Interface.hpp  ItemESP.cpp  ItemESP.hpp  ItemPhysics.cpp  ItemPhysics.hpp  JumpCircles.cpp  JumpCircles.hpp  Keystrokes.cpp  Keystrokes.hpp  LevelInfo.cpp  LevelInfo.hpp  MotionBlur.cpp  MotionBlur.hpp  NameProtect.hpp  Nametags.cpp  (+25 more)
src/Hook/: Detour.cpp  Detour.hpp  Hook.cpp  Hook.hpp  HookManager.cpp  HookManager.hpp
src/SDK/: OffsetProvider.cpp  OffsetProvider.hpp  SigManager.cpp  SigManager.hpp
src/SDK/Minecraft/: BedrockPlatformUWP.cpp  ClientInstance.cpp  ClientInstance.hpp  GameSession.hpp  JSON.cpp  JSON.hpp  MainView.cpp  MainView.hpp  MinecraftGame.cpp  MinecraftGame.hpp  MinecraftSim.cpp  MinecraftSim.hpp  Options.hpp  mce.hpp
src/Utils/: ActorUtils.cpp  ActorUtils.hpp  AudioUtils.cpp  AudioUtils.hpp  ChatUtils.cpp  ChatUtils.hpp  FileUtils.cpp  FileUtils.hpp  FontHelper.cpp  FontHelper.hpp  Keyboard.cpp  Keyboard.hpp  Logger.cpp  Logger.hpp  MemUtils.cpp  MemUtils.hpp  MessageTemplate.hpp  OAuthUtils.cpp  OAuthUtils.hpp  ProcUtils.cpp  ProcUtils.hpp  Resource.hpp  Resources.cpp  Resources.hpp  StringUtils.cpp  StringUtils.hpp  Structs.hpp  Utils.hpp
src/Utils/GameUtils/: ActorUtils.cpp  ActorUtils.hpp  ChatUtils.cpp  ChatUtils.hpp  ItemUtils.cpp  ItemUtils.hpp  PacketUtils.cpp  PacketUtils.hpp
src/Utils/MiscUtils/: Audio.cpp  Audio.hpp  BlockUtils.cpp  BlockUtils.hpp  ColorUtils.cpp  ColorUtils.hpp  CommandUtils.cpp  D2D.cpp  D2D.hpp  EasingUtil.hpp  ImRenderUtils.cpp  ImRenderUtils.hpp  MathUtils.cpp  MathUtils.hpp  NotifyUtils.cpp  NotifyUtils.hpp  RenderUtils.cpp  RenderUtils.hpp  SoundUtils.cpp
src/Utils/SysUtils/: Base64.cpp  Base64.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp  HWUtils.cpp  HWUtils.hpp  HttpRequest.cpp  HttpRequest.hpp  SHA256.cpp  SHA256.hpp  StackWalker.cpp  StackWalker.hpp
(+108 files in other folders)
